[tool.poetry]
name = "mojo-config"
description = "Automation Mojo Configuration Package"
version = "1.3.5"
authors = []
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pymongo = {extras = ["srv"], version = "^4.0.0", optional = true}
couchdb = {version = "^1.2", optional = true}
cryptography = "^41.0.3"
mojo-errors = ">=1.3.0 <1.4.0"
mojo-collections = ">=1.3.0 <1.4.0"
mojo-startup = ">=1.3.5 <1.4.0"
mojo-extension = ">=1.3.7 <1.4.0"

[tool.poetry.extras]
mongodb = ["pymongo"]
couchdb = ["couchdb"]

[tool.poetry.group.dev.dependencies]
myst-parser = "^0.18.1"
sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
