[tool.poetry]
name = "mojo-config"
description = "Automation Mojo Configuration Package"
version = "1.3.21"
authors = []
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pymongo = {extras = ["srv"], version = "^4.0.0", optional = true}
couchdb = {version = "^1.2", optional = true}
cryptography = ">=41.0.3,<43.0.0"
mojo-errors = ">=1.3.9 <1.4.0"
mojo-collections = ">=1.3.16 <1.4.0"
mojo-startup = ">=1.3.11 <1.4.0"
mojo-extension = ">=1.3.19 <1.4.0"
mojo-credentials = ">=1.3.17 <1.4.0"
pyyaml = "^6.0.1"

[tool.poetry.extras]
mongodb = ["pymongo"]
couchdb = ["couchdb"]

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
