[tool.poetry]
name = "mojo-config"
description = "Automation Mojo Configuration Package"
version = "2.0.4"
authors = []
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pymongo = {extras = ["srv"], version = "^4.0.0", optional = true}
couchdb = {version = "^1.2", optional = true}
cryptography = ">=41.0.3,<43.0.0"
pyyaml = "^6.0.1"
requests = "^2.32.3"
mojo-errors = ">=2.0.0 <2.1.0"
mojo-collections = ">=2.0.1 <2.1.0"
mojo-startup = ">=2.0.5 <2.1.0"
mojo-extension = ">=2.0.4 <2.1.0"
mojo-credentials = ">=2.0.0 <2.1.0"
mojo-dataprofiles = ">=2.0.3 <2.1.0"

[tool.poetry.extras]
mongodb = ["pymongo"]
couchdb = ["couchdb"]

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
